--- a/src/scss/actor/parts/mystic.scss
+++ b/src/scss/actor/parts/mystic.scss
@@ -25,6 +25,12 @@
     }
     // Grids
 
+    // ACT
+    div .act-vias .group-header {
+      padding-right: 2rem;
+    }
+    // ACT
+
     // Magic Projection
     .magic-projection {
       .title {
@@ -286,26 +292,6 @@
       }
     }
     // Summons
-
-    // Metamagics
-    .metamagics {
-      .metamagic-row:first-child {
-        margin-top: 0;
-      }
-
-      .metamagic-row {
-        margin-top: 0.75rem;
-
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        grid-column-gap: 0.1rem;
-
-        .name .input-container {
-          width: 100%;
-        }
-      }
-    }
-    // Metamagics
   }
 
   .mystic-spells-tab {
@@ -324,7 +310,15 @@
         box-shadow: $card-box-shadow;
 
         margin: 0.5rem;
-        .spell-svelte {
+
+        .input {
+          height: 1.25rem;
+        }
+
+        .spell-header {
+          padding-right: 0.5rem;
+          padding-left: 0.5rem;
+
           width: 100%;
 
           .first-row {
