fix(styles): adjust SCSS for compatibility with Foundry v13

--- a/src/scss/actor/parts/secondaries.scss
+++ b/src/scss/actor/parts/secondaries.scss
@@ -1,6 +1,6 @@
 @import '../../variable';
 
-.secondaries {
+.secondaries-tab {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 1rem;
