--- a/src/scss/actor/parts/settings.scss
+++ b/src/scss/actor/parts/settings.scss
@@ -1,6 +1,6 @@
 @import '../../variable';
 
-.settings {
+.settings-tab {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 1rem;
