--- a/src/templates/actor/parts/settings/settings.hbs
+++ b/src/templates/actor/parts/settings/settings.hbs
@@ -1,4 +1,4 @@
-<div class='settings'>
+<div class='settings-tab'>
   {{> "systems/animabf/templates/actor/parts/settings/parts/tabVisibility.hbs"}}
   {{> "systems/animabf/templates/actor/parts/settings/parts/advancedSettings.hbs"}}
   {{> "systems/animabf/templates/actor/parts/settings/parts/advancedCharacteristics.hbs"}}
