--- a/src/templates/actor/parts/secondaries/secondaries.hbs
+++ b/src/templates/actor/parts/secondaries/secondaries.hbs
@@ -1,4 +1,4 @@
-<div class="secondaries">
+<div class="secondaries-tab">
   <div>
     {{> "systems/animabf/templates/actor/parts/secondaries/parts/athletics.hbs"}}
     {{> "systems/animabf/templates/actor/parts/secondaries/parts/vigor.hbs"}}
