feat: add supernaturalShield item sheet

--- a/src/scss/items/items-sheet.scss
+++ b/src/scss/items/items-sheet.scss
@@ -5,3 +5,4 @@
 @import './armor/armor.scss';
 @import './spell/spell.scss';
 @import './psychic-power/psychic-power.scss';
+@import './supernatural-shield/supernatural-shield.scss';
