fix(styles): add Barlow font and adjust input styles

--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -19,6 +19,14 @@ $text-color-light: var(--text-color-light, variable.$background-light);
 
 $font-size: var(--font-size, 34px);
 $icon-size: var(--icon-size, 35px);
+$font-family: 'Barlow', 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif;
+
+@font-face {
+  font-family: 'Barlow';
+  src: url('/systems/animabf/assets/fonts/Barlow-Medium.ttf') format('ttf');
+  font-weight: 500;
+  font-style: normal;
+}
 
 .buttonlike {
   cursor: pointer;
@@ -58,9 +66,11 @@ h4 {
   font-weight: normal;
   height: 34px;
   font-size: 1.9rem;
+  font-family: $font-family;
 }
 
 .text {
+  font-family: $font-family;
   font-size: $font-size;
   color: inherit;
 }
@@ -77,10 +87,13 @@ h4 {
   all: unset;
   width: 60px;
   color: white;
+  font-family: $font-family;
   font-size: $font-size;
-  -webkit-text-stroke: 4px black;
-  paint-order: stroke fill;
+  // -webkit-text-stroke: 4px black;
+  // paint-order: stroke fill;
+  text-shadow: 2px 2px black;
   text-align: center;
+  margin-bottom: 2.5px;
   &:focus {
     @extend .card-input;
   }
