--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -85,7 +85,7 @@ h4 {
 
 .card-input {
   all: unset;
-  width: 60px;
+  width: auto;
   color: white;
   font-family: $font-family;
   font-size: $font-size;
@@ -94,8 +94,13 @@ h4 {
   text-shadow: 0.08em 0.08em black;
   text-align: center;
   margin-bottom: 2.5px;
+  margin-left: -10px;
+  margin-right: -10px;
   &:focus {
     @extend .card-input;
+  }
+  &[hidden] {
+    display: none !important;
   }
 }
 
