--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -94,8 +94,9 @@ h4 {
   text-shadow: 0.08em 0.08em black;
   text-align: center;
   margin-bottom: 2.5px;
-  margin-left: -10px;
-  margin-right: -10px;
+  margin-left: -0.3em;
+  margin-right: -0.8em;
+  clip-path: inset(0 0.5em 0 0.5em);
   &:focus {
     @extend .card-input;
   }
