fix(styles): correctly load Barlow font face

--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -23,7 +23,7 @@ $font-family: 'Barlow', 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif;
 
 @font-face {
   font-family: 'Barlow';
-  src: url('/systems/animabf/assets/fonts/Barlow-Medium.ttf') format('ttf');
+  src: url('/systems/animabf/assets/fonts/Barlow-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
