FIX - breaking roll

--- a/src/templates/actor/parts/combat/parts/weapons.hbs
+++ b/src/templates/actor/parts/combat/parts/weapons.hbs
@@ -63,6 +63,7 @@
             "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
               class="breaking"
               rollable=true
+              rollableDice='1d10'
               disabled=true
               title=(localize "anima.ui.combat.weapons.breaking.final.title")
               inputName=(concat "system.dynamic.weapons." weapon._id ".system.breaking.final.value")
