ADD - Custom Die formulas

--- a/src/templates/actor/parts/combat/parts/base-values.hbs
+++ b/src/templates/actor/parts/combat/parts/base-values.hbs
@@ -15,6 +15,7 @@
       rollable=true
       inputName="system.combat.attack.base.value"
       inputValue=system.combat.attack.base.value
+      rollableDice=system.general.diceSettings.abilityDie
       rollSecondaryInput=true
       hasSecondaryInput=true
       addTooltips=true
@@ -29,6 +30,7 @@
       rollable=true
       inputName="system.combat.block.base.value"
       inputValue=system.combat.block.base.value
+      rollableDice=system.general.diceSettings.abilityDie
       rollSecondaryInput=true
       hasSecondaryInput=true
       addTooltips=true
@@ -43,6 +45,7 @@
       rollable=true
       inputName="system.combat.dodge.base.value"
       inputValue=system.combat.dodge.base.value
+      rollableDice=system.general.diceSettings.abilityDie
       rollSecondaryInput=true
       hasSecondaryInput=true
       addTooltips=true
