--- a/src/templates/actor/parts/mystic/parts/summoning.hbs
+++ b/src/templates/actor/parts/mystic/parts/summoning.hbs
@@ -15,6 +15,7 @@
           class="summon"
           title=(localize "anima.ui.mystic.summoning.summon.title")
           rollable=true
+          rollableDice=system.general.diceSettings.abilityDie
           inputName="system.mystic.summoning.summon.base.value"
           inputValue=system.mystic.summoning.summon.base.value
           hasSecondaryInput=true
@@ -29,6 +30,7 @@
           class="bind"
           title=(localize "anima.ui.mystic.summoning.bind.title")
           rollable=true
+          rollableDice=system.general.diceSettings.abilityDie
           inputName="system.mystic.summoning.bind.base.value"
           inputValue=system.mystic.summoning.bind.base.value
           hasSecondaryInput=true
@@ -45,6 +47,7 @@
           class="control"
           title=(localize "anima.ui.mystic.summoning.control.title")
           rollable=true
+          rollableDice=system.general.diceSettings.abilityDie
           inputName="system.mystic.summoning.control.base.value"
           inputValue=system.mystic.summoning.control.base.value
           hasSecondaryInput=true
@@ -59,6 +62,7 @@
           class="banish"
           title=(localize "anima.ui.mystic.summoning.banish.title")
           rollable=true
+          rollableDice=system.general.diceSettings.abilityDie
           inputName="system.mystic.summoning.banish.base.value"
           inputValue=system.mystic.summoning.banish.base.value
           hasSecondaryInput=true
