--- a/src/templates/actor/parts/psychic/parts/psychic-potential.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-potential.hbs
@@ -13,6 +13,7 @@
       class="potential"
       title=(localize "anima.ui.psychic.psychicPotential.potential.title")
       rollable=true
+      rollableDice=system.general.diceSettings.abilityDie
       inputName="system.psychic.psychicPotential.base.value"
       inputValue=system.psychic.psychicPotential.base.value
       hasSecondaryInput=true
