--- a/src/scss/actor/parts/settings.scss
+++ b/src/scss/actor/parts/settings.scss
@@ -4,4 +4,27 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 1rem;
+
+  .common-titled-input {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  > .label {
+    flex: 1 1 auto; 
+    white-space: nowrap;
+    min-width: 0; 
+  }
+
+  > .input-container {
+    flex: 0 0 auto; 
+    min-width: 150px;  
+    max-width: 50%;    
+  }
+
+  input {
+    width: 100%;      
+    max-width: none;  
+  }
+}
 }
