UPDATED - hbs files now call cusotm formula

--- a/src/templates/actor/parts/combat/parts/base-values.hbs
+++ b/src/templates/actor/parts/combat/parts/base-values.hbs
@@ -15,7 +15,7 @@
       rollable=true
       inputName="system.combat.attack.base.value"
       inputValue=system.combat.attack.base.value
-      rollableDice=system.general.diceSettings.abilityDie
+      rollableDice=@root.system.general.diceSettings.abilityDie.value
       rollSecondaryInput=true
       hasSecondaryInput=true
       addTooltips=true
@@ -30,7 +30,7 @@
       rollable=true
       inputName="system.combat.block.base.value"
       inputValue=system.combat.block.base.value
-      rollableDice=system.general.diceSettings.abilityDie
+      rollableDice=@root.system.general.diceSettings.abilityDie.value
       rollSecondaryInput=true
       hasSecondaryInput=true
       addTooltips=true
@@ -45,7 +45,7 @@
       rollable=true
       inputName="system.combat.dodge.base.value"
       inputValue=system.combat.dodge.base.value
-      rollableDice=system.general.diceSettings.abilityDie
+      rollableDice=@root.system.general.diceSettings.abilityDie.value
       rollSecondaryInput=true
       hasSecondaryInput=true
       addTooltips=true
