--- a/src/templates/actor/parts/general/parts/presence.hbs
+++ b/src/templates/actor/parts/general/parts/presence.hbs
@@ -15,7 +15,7 @@
       inputName="system.general.presence.base.value"
       inputValue=system.general.presence.base.value
       rollable=true
-      rollableDice=system.general.diceSettings.abilityDie
+      rollableDice=@root.system.general.diceSettings.abilityDie.value
       rollableMessage=(localize "anima.ui.general.presence.title")
     }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
