--- a/src/templates/actor/parts/mystic/parts/summoning.hbs
+++ b/src/templates/actor/parts/mystic/parts/summoning.hbs
@@ -15,7 +15,7 @@
           class="summon"
           title=(localize "anima.ui.mystic.summoning.summon.title")
           rollable=true
-          rollableDice=system.general.diceSettings.abilityDie
+          rollableDice=@root.system.general.diceSettings.abilityDie.value
           inputName="system.mystic.summoning.summon.base.value"
           inputValue=system.mystic.summoning.summon.base.value
           hasSecondaryInput=true
@@ -30,7 +30,7 @@
           class="bind"
           title=(localize "anima.ui.mystic.summoning.bind.title")
           rollable=true
-          rollableDice=system.general.diceSettings.abilityDie
+          rollableDice=@root.system.general.diceSettings.abilityDie.value
           inputName="system.mystic.summoning.bind.base.value"
           inputValue=system.mystic.summoning.bind.base.value
           hasSecondaryInput=true
@@ -47,7 +47,7 @@
           class="control"
           title=(localize "anima.ui.mystic.summoning.control.title")
           rollable=true
-          rollableDice=system.general.diceSettings.abilityDie
+          rollableDice=@root.system.general.diceSettings.abilityDie.value
           inputName="system.mystic.summoning.control.base.value"
           inputValue=system.mystic.summoning.control.base.value
           hasSecondaryInput=true
@@ -62,7 +62,7 @@
           class="banish"
           title=(localize "anima.ui.mystic.summoning.banish.title")
           rollable=true
-          rollableDice=system.general.diceSettings.abilityDie
+          rollableDice=@root.system.general.diceSettings.abilityDie.value
           inputName="system.mystic.summoning.banish.base.value"
           inputValue=system.mystic.summoning.banish.base.value
           hasSecondaryInput=true
