--- a/src/templates/actor/parts/secondaries/common/secondary-skill.hbs
+++ b/src/templates/actor/parts/secondaries/common/secondary-skill.hbs
@@ -14,7 +14,7 @@
         class="name"
         title=(localize (concat "anima.ui.secondaries." key ".title"))
         rollable=true
-        rollableDice=system.general.diceSettings.abilityDie
+        rollableDice= @root.system.general.diceSettings.abilityDie.value
         rollSecondaryInput=true
         inputName=(concat "system.secondaries." ../this.secondarySkillName "." key ".base.value")
         inputValue=atr.base.value
