--- a/src/templates/actor/parts/header/parts/resistances.hbs
+++ b/src/templates/actor/parts/header/parts/resistances.hbs
@@ -14,7 +14,7 @@
         class="resistance"
         title=(localize (concat 'anima.ui.resistances.' key))
         rollable=true
-        rollableDice=system.general.diceSettings.resistanceDie
+        rollableDice=@root.system.general.diceSettings.resistanceDie.value
         rollableMessage=(localize (concat 'anima.ui.resistances.' key))
         inputName=(concat "system.characteristics.secondaries.resistances." key ".base.value")
         inputValue=atr.base.value
