UPDATED - Macro bar
Added getCustomMacroButtons Hook
Updated z index to show them below foundry macro context menu

--- a/src/scss/custom-hotbar/custom-hotbar.scss
+++ b/src/scss/custom-hotbar/custom-hotbar.scss
@@ -1,5 +1,5 @@
 .custom-action-bar {
-  z-index: 70;
+  z-index: calc(var(--z-index-app) - 1); 
   position: fixed;
   bottom: 100px;
   left: 240px;
