--- a/src/templates/actor/parts/mystic/mystic.hbs
+++ b/src/templates/actor/parts/mystic/mystic.hbs
@@ -34,7 +34,7 @@
 
     <div class='tab' data-group="secondary" data-tab="mystic-spells">
       <div class='mystic-spells-tab'>
-        <div id='svelte-spell-board'></div>
+          {{> "systems/animabf/templates/actor/parts/mystic/parts/spells/spells.hbs"}}
       </div>
     </div>
   </section>
