--- a/src/templates/actor/parts/combat/parts/weapons.hbs
+++ b/src/templates/actor/parts/combat/parts/weapons.hbs
@@ -187,7 +187,7 @@
                 inputName=(concat "system.dynamic.weapons." weapon._id ".system.initiative.final.value")
                 inputValue=weapon.system.initiative.final.value
               }}
-              {{{injectFromHook "abf.injectWeaponFooter" weapon._id}}}
+              {{{injectFromHook "abf.actor.combat.weapon.footer" weapon._id}}}
             </div>
           {{/"systems/animabf/templates/common/ui/group-footer.hbs"}}
         {{/"systems/animabf/templates/common/ui/group.hbs"}}
