UPDATED - foundry version to V13

--- a/src/scss/actor/parts/main.scss
+++ b/src/scss/actor/parts/main.scss
@@ -41,6 +41,14 @@
   }
 }
 
+// .tab {
+//   display: none;
+// }
+
+// .tab.active {
+//   display: block;
+// }
+
 .actor-sheet {
   display: flex;
   flex-direction: column;
