--- a/src/scss/actor/parts/settings.scss
+++ b/src/scss/actor/parts/settings.scss
@@ -1,7 +1,9 @@
 @import '../../variable';
 
 .settings {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 1rem;
+  .settings-body {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 1rem;
+  }
 }
