--- a/src/templates/actor/parts/secondaries/secondaries.hbs
+++ b/src/templates/actor/parts/secondaries/secondaries.hbs
@@ -1,18 +1,20 @@
 <div class="secondaries">
-  <div>
-    {{> "systems/abf/templates/actor/parts/secondaries/parts/athletics.hbs"}}
-    {{> "systems/abf/templates/actor/parts/secondaries/parts/vigor.hbs"}}
-    {{> "systems/abf/templates/actor/parts/secondaries/parts/perception.hbs"}}
-  </div>
-  <div>
-    {{> "systems/abf/templates/actor/parts/secondaries/parts/intellectual.hbs"}}
-  </div>
-  <div>
-    {{> "systems/abf/templates/actor/parts/secondaries/parts/subterfuge.hbs"}}
-    {{> "systems/abf/templates/actor/parts/secondaries/parts/social.hbs"}}
-  </div>
-  <div>
-    {{> "systems/abf/templates/actor/parts/secondaries/parts/creative.hbs"}}
-    {{> "systems/abf/templates/actor/parts/secondaries/parts/secondary-special-skills.hbs"}}
-  </div>
+  <section class='secondaries-body'>  
+    <div>
+      {{> "systems/abf/templates/actor/parts/secondaries/parts/athletics.hbs"}}
+      {{> "systems/abf/templates/actor/parts/secondaries/parts/vigor.hbs"}}
+      {{> "systems/abf/templates/actor/parts/secondaries/parts/perception.hbs"}}
+    </div>
+    <div>
+      {{> "systems/abf/templates/actor/parts/secondaries/parts/intellectual.hbs"}}
+    </div>
+    <div>
+      {{> "systems/abf/templates/actor/parts/secondaries/parts/subterfuge.hbs"}}
+      {{> "systems/abf/templates/actor/parts/secondaries/parts/social.hbs"}}
+    </div>
+    <div>
+      {{> "systems/abf/templates/actor/parts/secondaries/parts/creative.hbs"}}
+      {{> "systems/abf/templates/actor/parts/secondaries/parts/secondary-special-skills.hbs"}}
+    </div>
+  </section>
 </div>
