--- a/src/templates/actor/parts/settings/settings.hbs
+++ b/src/templates/actor/parts/settings/settings.hbs
@@ -1,6 +1,8 @@
 <div class='settings'>
-  {{> "systems/abf/templates/actor/parts/settings/parts/tabVisibility.hbs"}}
-  {{> "systems/abf/templates/actor/parts/settings/parts/advancedSettings.hbs"}}
-  {{> "systems/abf/templates/actor/parts/settings/parts/advancedCharacteristics.hbs"}}
-  {{> "systems/abf/templates/actor/parts/settings/parts/automationOptions.hbs"}}
+  <section class='settings-body'> 
+    {{> "systems/abf/templates/actor/parts/settings/parts/tabVisibility.hbs"}}
+    {{> "systems/abf/templates/actor/parts/settings/parts/advancedSettings.hbs"}}
+    {{> "systems/abf/templates/actor/parts/settings/parts/advancedCharacteristics.hbs"}}
+    {{> "systems/abf/templates/actor/parts/settings/parts/automationOptions.hbs"}}
+  </section> 
 </div>
