--- a/src/scss/actor/parts/secondaries.scss
+++ b/src/scss/actor/parts/secondaries.scss
@@ -1,15 +1,17 @@
 @import '../../variable';
 
 .secondaries {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-column-gap: 1rem;
+  .secondaries-body {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column-gap: 1rem;
 
-  div .common-group {
-    &:first-child {
-      margin-top: 0;
+    div .common-group {
+      &:first-child {
+        margin-top: 0;
+      }
+
+      margin-top: 0.75rem;
     }
-
-    margin-top: 0.75rem;
   }
 }
